# automake-template

./: Makefile.am  README.md  configure.ac
subdir-1/: Makefile.am
subdir-2/: Makefile.am
